[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/unit_move_arrow.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.3, 0.1, 0.3 )

[sub_resource type="QuadMesh" id=2]
size = Vector2( 0.3, 0.3 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.905882, 0.843137, 0.0235294, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.1, 1, 0.1 )

[node name="unit_move_arrow" type="Area"]
monitorable = false
script = ExtResource( 1 )

[node name="collision_shape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="free_check_area" type="Area" parent="."]
editor/display_folded = true
input_ray_pickable = false
monitorable = false

[node name="collision_shape" type="CollisionShape" parent="free_check_area"]
visible = false
shape = SubResource( 4 )
[connection signal="mouse_entered" from="." to="." method="_on_unit_move_arrow_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_unit_move_arrow_mouse_exited"]
